<resources>

    <string name="app_name">Contact Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Contact Manager</string>
    <string name="addString">Add Contact</string>
    <string name="firstString">First Name</string>
    <string name="phoneString">Phone Number</string>
    <string name="emailString">Email Address</string>
    <string name="bdayString">Birthday</string>
    <string name="lastString">Last Name</string>
    <string name="searchString">Search</string>
    <string name="saveString">Save Changes</string>
    <string name="deleteString">Delete Contact</string>

    <string-array name="DateArray">
        <item></item>
        <item>31/12/2012</item>
        <item>12/31/2012</item>
    </string-array>
    
   <string-array name="displayArray">
        <item></item>
        <item>Phone</item>
        <item>email</item>
    </string-array>

    <string name="title_activity_add_contact">Add Contact</string>
    <string name="title_activity_edit_contact">Edit Contact</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Lstring">Display Last Name First</string>
    <string name="explanation">If unchecked first name will be displayed first</string>
    <string name="dateString">Date Formatting</string>
    <string name="lvFormat">Add Info to List View</string>


</resources>